# SecGen

./: .gitignore  LICENSE  README.md  env  pyproject.toml  tmp.json
config/: actuated_pendulum.json  base.json  experiments.txt  models.txt  names.txt
scripts/: compare_true_system.ipynb  continue_train_model.py  deepsi-test.py  evaluate_model.py  f16-croissant.py  n4sid_test.py  preprocessing.py  result_folder.ipynb  run.sh  train_model.py  write_names.py
scripts/matlab/: analysis.asv  analysis.m  analysis_l2.asv  analysis_l2.m  analysis_stability.asv  analysis_stability.m  autodiff.asv  autodiff.m  dzn.m  l2_stability.asv  l2_stability.m  load_f16_data.m  n4sid_.m  sat.m  test.mat
scripts/matlab/data/: F16_estimate_n4sid.mat  F16_n4sid.mat  n4sid_mat-coupled-msd-nx_8.mat  pend_test_none_n4sid.mat
scripts/matlab/utils/: analyze_system.m  d_sim.asv  d_sim.m  utils.m
scripts/notebooks/: create_plots.ipynb  ctr_design_l2_stable_model.ipynb  deepsi.ipynb  dft.ipynb  evaluate_initial_state.ipynb  linear_approximation_nonlinear_system.ipynb  ml-crossaint.ipynb  n4sid.ipynb  nonlinear_benchmark_results.ipynb  nonlinear_benchmars_test.ipynb  playground.ipynb  result_folder.ipynb  worst-case-amplification.ipynb
scripts/notebooks/schema/: f16-croissant.json  test.json
src/crnn/: additional_tests.py  configuration.py  data_io.py  datasets.py  evaluate.py  io.py  loss.py  metrics.py  model_io.py  optimizer.py  scheduler.py  tracker.py  train.py
src/crnn/addon/: ssid.py
src/crnn/configuration/: base.py  experiment.py
src/crnn/io/: data.py  model.py  tracker.py
src/crnn/models/: base.py  base_jax.py  base_torch.py  constrained.py  io.py  l2.py  model_io.py  recurrent.py  recurrent_jax.py  sector_bounded.py  structured_state_space.py  switched_linear.py
src/crnn/preprocessing/: __init__.py  base.py
src/crnn/tracker/: io.py  (+4 more)
tests/: README.md  config.json  conftest.py  smoke_test.py  test_jax_models.py  test_n4sid_compare.py  test_n4sid_transient_time.py  test_nonlinear_bechmark_datasets.py  test_preprocessing.py  test_torch_models.py  test_transient_time_basic.py  utils.py
tests/config/: config.json  config_jax.json  config_torch.json
(+134 files in other folders)
