[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crnn"
version = "0.1.0"
description = "Constrained recurrent neural network for system identification."
authors = [{name = "Daniel Frank", email = "daniel.frank@ki.uni-stuttgart.de"}]
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"
dependencies = [
    "torch",
    "scipy",
    "numpy<2.0",
    "pandas",
    "cvxpy",
    "pydantic",
    "matplotlib",
    "mosek",
    "mlflow",
    "nonlinear-benchmarks",
    "ssm @ git+https://github.com/Dany-L/SSM-sysid.git"
]
[project.optional-dependencies]
test = [
    "black",
    "isort",
    "mypy",
    "flake8",
    "pytest",
    "pytest-xdist"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "smoke: marks tests as smoke tests",
    "benchmark: marks tests as benchmark tests"
]

# Filter out specific deprecation warnings
filterwarnings = [
    "ignore::DeprecationWarning:google._upb._message",
    "ignore::DeprecationWarning:<frozen importlib._bootstrap>",
    "ignore:Type google._upb._message.*uses PyType_Spec.*:DeprecationWarning"
]

# Configure logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"




